Create Circle hasura
Mutation / Action Handler / Validation

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 # for graphql
 REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
 HASURA_ADMIN_SECRET=secret
+COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
