--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:3000/api/hasura/auth
       HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
+      HASURA_ACTION_BASE_URL: http://host.docker.internal:3000/api/hasura/actions
 
 volumes:
   db_data:
