--- a/hasura/metadata/databases/default/tables/public_circle_integrations.yaml
+++ b/hasura/metadata/databases/default/tables/public_circle_integrations.yaml
@@ -1,13 +1,23 @@
 table:
   name: circle_integrations
   schema: public
+object_relationships:
+- name: circle
+  using:
+    foreign_key_constraint_on: circle_id
 insert_permissions:
 - permission:
     backend_only: false
-    check: {}
+    check:
+      circle:
+        users:
+          _and:
+          - role:
+              _eq: 1
+          - address:
+              _eq: X-Hasura-Address
     columns:
     - circle_id
-    - id
     - data
     - name
     - type
@@ -24,5 +34,12 @@ select_permissions:
   role: user
 delete_permissions:
 - permission:
-    filter: {}
+    filter:
+      circle:
+        users:
+          _and:
+          - role:
+              _eq: 1
+          - address:
+              _eq: X-Hasura-Address
   role: user
